
Language files listed under each version were made by the author beside them, and then
modified by me for consistency/bug fixing.

Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)

Version 1.0.8.11
  -  Added language files
     * ARM (Marat Dukhan)
     * DCL (Petr Hendl)
     * LDIF (Bruno Harbulot)
     * PARI/GP (Charles R Greathouse IV)
     * SPARK (Phil Thornley)
     * StoneScript (Archimmersion)
     * UPC (Viraj Sinha)
     * Vedit (Pauli Lindgren)
  - Updated aliasd.php contrib script (SF#3073275, count)
  -  Improvements to language files (BenBE)
     * Symbol and char literal handling for Scala (Paul Butcher, BenBE)
     * Multiline comments of F# weren't actually multiline (BenBE)
     * Support for IPv6 addresses in RFC822 messages (BenBE)
     * Properly handle retrieving names from language files (MikeSee, BenBE)
     * Changes for improved highlighting of signle line comments and end-of-code indicators
     * Missing keywords and improved highlighting of comments
     * Problem with DOS/Batch highlighting breaking out at variables (BenBE)
     * Addition of MMX/SSE/x86-64 registers and MMX/SSE instructions for
       ASM language file(up to 4.2) (Dennis Yurichev)
     * Further improvements to ASM language file to introduce all latest
       already documented x86 architecture instructions (Marat Dukhan)
     * Fixed links for R/S+ language file (Fernando H.F.P. da Rosa)
     * Fix a problem with Delphi/Pascal regarding hex numbers/chars (BenBE)
     * Fixed a typo and missing keywords for HTML4 and HTML5 (SF#3365452, BenBE)
     * Fixed a typo in Modula-3 language file (SF#3358216, BenBE)
     * Added missing keywords for MySQL (SF#3290998, ct-bob, BenBE)
     * Added missing keywords for Pascal (SF#3176749, BenBE)
     * Properly detect the keyword that is to be linked (BenBE)
Version 1.0.8.10
  -  Added language files