@@ -88,6 +88,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Cuesheet               Benny Baumann
 - D                      Thomas Kuehne
 - DCL                    Petr Hendl
+- DCPU-16                Benny Baumann
 - DCS                    Stelio Passaris
 - Delphi                 Járja Norbert, Benny Baumann
 - Div                    Gabriel Lorenzo
